test/errors/error44.vult
fun foo (x, y) {
  match (x, y) {
    1 , 2 -> return 0;
    3, _, _ -> return 1;
    _ -> return 2;
  }
}
